; ModuleID = '/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_iterator.c_com_iter_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/com_dotnet/extr_com_iterator.c_com_iter_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.php_com_iterator = type { i32, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @com_iter_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @com_iter_dtor(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.php_com_iterator*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @Z_PTR(i32 %6)
  %8 = inttoptr i64 %7 to %struct.php_com_iterator*
  store %struct.php_com_iterator* %8, %struct.php_com_iterator** %3, align 8
  %9 = load %struct.php_com_iterator*, %struct.php_com_iterator** %3, align 8
  %10 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.php_com_iterator*, %struct.php_com_iterator** %3, align 8
  %15 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %14, i32 0, i32 3
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @IEnumVARIANT_Release(i64 %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load %struct.php_com_iterator*, %struct.php_com_iterator** %3, align 8
  %20 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %19, i32 0, i32 2
  %21 = call i32 @VariantClear(i32* %20)
  %22 = load %struct.php_com_iterator*, %struct.php_com_iterator** %3, align 8
  %23 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %22, i32 0, i32 1
  %24 = call i32 @VariantClear(i32* %23)
  %25 = load %struct.php_com_iterator*, %struct.php_com_iterator** %3, align 8
  %26 = getelementptr inbounds %struct.php_com_iterator, %struct.php_com_iterator* %25, i32 0, i32 0
  %27 = call i32 @zval_ptr_dtor(i32* %26)
  ret void
}

declare dso_local i64 @Z_PTR(i32) #1

declare dso_local i32 @IEnumVARIANT_Release(i64) #1

declare dso_local i32 @VariantClear(i32*) #1

declare dso_local i32 @zval_ptr_dtor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
